--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Farm SUSHI with Uniswap LP Token" />
+    <meta name="description" content="Farm MOAR with Uniswap LP Token" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -18,13 +18,10 @@
     <meta name="twitter:image" content="http://sushiswap.org/hero.png" />
     <meta
       name="twitter:description"
-      content="Farm SUSHI with Uniswap LP Token"
+      content="Farm MOAR with Uniswap LP Token"
     />
     <meta name="twitter:card" content="summary" />
-    <meta
-      name="twitter:title"
-      content="🍣 SushiSwap - An Evolution over Uniswap with Yield Farming"
-    />
+    <meta name="twitter:title" content="🍣 MOAR - " />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -34,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>SushiSwap</title>
+    <title>MOAR</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
