more assets, vc still img

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
       href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Noto+Sans:wght@400;700&family=Reem+Kufi&family=Roboto+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <meta name="twitter:image" content="http://sushiswap.org/hero.png" />
+    <meta
+      name="twitter:image"
+      content="https://pbs.twimg.com/profile_images/1309378863223447552/3rfJVf2Z_400x400.jpg"
+    />
     <meta
       name="twitter:description"
       content="Farm MOAR with Uniswap LP Token"
