use summary large image

--- a/www/public/index.html
+++ b/www/public/index.html
@@ -21,13 +21,13 @@
     />
     <meta
       name="twitter:image"
-      content="https://pbs.twimg.com/profile_images/1309378863223447552/3rfJVf2Z_400x400.jpg"
+      content="https://many.global/static/media/chefchad.1c6cd500.png"
     />
     <meta
       name="twitter:description"
       content="Farm MOAR with Uniswap LP Token"
     />
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="🗿 MOAR - " />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -70,7 +70,7 @@
               l.pathname.slice(0, -1) +
                 (q.p || '') +
                 (q.q ? '?' + q.q : '') +
-                l.hash
+                l.hash,
             )
           }
         }
